<resources>
    <string name="app_name">SimStox</string>
    <string name="input_api_key_label">Input API Key</string>
    <string name="input_api_key_box">Input API Key</string>
    <string name="output_api_key_label">Output API Key</string>
    <string name="output_api_key_box">Output API Key</string>
    <string name="confirm_api_keys_button">Confirm API Keys</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="loading">loading…</string>
    <string name="price_label">Price: </string>
    <string name="quantity_label">Quantity: </string>
    <string name="working_capital_label">Working Capital</string>
    <string name="working_capital_box">Working Capital</string>
</resources>